DN-244 fixing spacing issue for add to schema button on results page

--- a/src/app/components/schemaAddToSchema/schemaAddToSchema.directive.scss
+++ b/src/app/components/schemaAddToSchema/schemaAddToSchema.directive.scss
@@ -4,7 +4,4 @@
     font-size: 18px;
     letter-spacing: 2px;
   }
-  .my-schema-button {
-    padding: 50px 20px !important;
-  }
 }
